k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: flask-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: flask-app

  template:

    metadata:
      labels:
        app: flask-app

    spec:

      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: environment
                    operator: In
                    values:
                      - dev

      containers:
        - name: flask-app

          image: vero026/flask-app:latest

          ports:
            - containerPort: 5050
