k8s/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: grafana
  namespace: taskmanager

spec:

  replicas: 1

  selector:

    matchLabels:
      app: grafana

  template:

    metadata:

      labels:
        app: grafana

    spec:

      containers:

      - name: grafana

        image: grafana/grafana

        ports:

        - containerPort: 3000

        volumeMounts:

        - mountPath: /var/lib/grafana
          name: grafana-storage

      volumes:

      - name: grafana-storage

        persistentVolumeClaim:
          claimName: grafana-pvc
