k8s/loki-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: taskmanager

spec:
  replicas: 1

  selector:
    matchLabels:
      app: loki

  template:
    metadata:
      labels:
        app: loki

    spec:
      containers:
      - name: loki
        image: grafana/loki:3.0.0

        args:
        - -config.file=/etc/loki/loki-config.yaml

        ports:
        - containerPort: 3100

        volumeMounts:
        - name: config
          mountPath: /etc/loki

      volumes:
      - name: config
        configMap:
          name: loki-config
