k8s/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: prometheus
  namespace: taskmanager

spec:

  replicas: 1

  selector:
    matchLabels:
      app: prometheus

  template:

    metadata:
      labels:
        app: prometheus

    spec:

      containers:

      - name: prometheus

        image: prom/prometheus

        ports:

        - containerPort: 9090

        volumeMounts:

        - name: config-volume
          mountPath: /etc/prometheus

      volumes:

      - name: config-volume

        configMap:
          name: prometheus-config
