k8s/promtail-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet

metadata:
  name: promtail
  namespace: taskmanager

spec:
  selector:
    matchLabels:
      app: promtail

  template:
    metadata:
      labels:
        app: promtail

    spec:
      serviceAccountName: default

      containers:
      - name: promtail
        image: grafana/promtail:3.0.0

        args:
        - -config.file=/etc/promtail/promtail.yaml

        volumeMounts:
        - name: config
          mountPath: /etc/promtail

        - name: varlog
          mountPath: /var/log

      volumes:
      - name: config
        configMap:
          name: promtail-config

      - name: varlog
        hostPath:
          path: /var/log
