k8s/loki-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: loki
  namespace: taskmanager

spec:
  selector:
    app: loki

  ports:
  - port: 3100
    targetPort: 3100

  type: ClusterIP
