k8s/prometheus-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: prometheus
  namespace: taskmanager

spec:

  selector:
    app: prometheus

  ports:

  - port: 9090
    targetPort: 9090

  type: NodePort
